# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.27.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Change COLOR_INST_VERSION to work with solarized. Thanks to khayyam:
	  http://forums.gentoo.org/viewtopic.php?p=7167646
	- Cosmetical fixes in the manpages
	- Add unused default variables {UPDATE_,DROP_}PRINT_IUSE
	  to formally complete *PRINT_IUSE references.

*eix-0.27.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- It is now possible to use eix colors with white background terminals:
	  To use the light color schemes, set DARK=false (e.g. in /etc/eixrc);
	  or set COLORSCHEME=2 or COLORSCHEME_ALT=3 for usage with ordinary
	  or 256 colors, respectively; see the description of these variables
	  in the eix manpage. The light schemes are not carefully designed:
	  improvements or complete rework are welcome!
	- Alternatively, you can force black background colors for the default
	  scheme with BG0=black. (For the 256 color dark scheme, this is even
	  the default since there were many complaints about its unreadability;
	  use BG1=none for the previous behavior).
	  See the description of the COLORSCHEME variables in the eix manpage
	- At least the color scheme 0 should now work also with solarized.
	- Minor fixes/improvements to dark colorscheme
	- Introduce --256l{,0,1} and --256d{,0,1} (obsoletes --256f{,0,1}).
	- Introduce COLOR_{KEYEND,OVERLAYNAME,OVERLAYNAMEEND,NUMBERTEXT}
	- Extend TERM_ALT and TERM_STATUSLINE default somewhat
	- eix-installed-after: New option -F File to use mtime for reference
	- Introduce EIX_INSTALLED_AFTER to set default args; corresponding new
	  eix-installed-after option -i to ignore. Previous -i is renamed to -I
	- Avoid strcasestr(), see http://bugs.gentoo.org/show_bug.cgi?id=437706

*eix-0.27.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce %{var[,;]...} for delayed substitution to simplify colors.
	- Fix colorscheme choice for eix-diff
	- Introduce FORMAT_{BEFORE,AFTER}_COLL_EXPAND*